added cursor to hambuger

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </nav>
       <!-- mobile siderbar -->
     </header>
-    <button id="menuBtn" class="fixed top-8 right-6 xl:hidden z-100">
+    <button id="menuBtn" class="fixed top-8 right-6 xl:hidden z-100 cursor-pointer">
       <img
         id="menuIcon"
         src="./src/Assets/images/icon-menu.svg"
