removed cursor to hambuger

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
       </nav>
       <!-- mobile siderbar -->
     </header>
-    <button id="menuBtn" class="fixed top-8 right-6 xl:hidden z-100 cursor-pointer">
+    <button id="menuBtn" class="fixed top-8 right-6 xl:hidden z-100 ">
       <img
         id="menuIcon"
         src="./src/Assets/images/icon-menu.svg"
-        alt="humberger"
+        alt="hamburger"
       />
     </button>
     <aside
